test/testzillians-compiler/ThorScriptCompilerStaticTest/data/error/5_limit/EXCEED_PARAM_LIMIT.t
@static_test { expect_message={ level="LEVEL_ERROR", id="EXCEED_PARAM_LIMIT" } }
function f(a:uint32, b:uint32, c:uint32, d:uint32, e:uin32):void
{
}
